[package]
name = "torfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
regex = "1"
tordoc = {path = "../tordoc"}
tor-circuit-generator = { path = "../tor-circuit-generator"}
seeded_rand = { path = "../seeded_rand"}
log = "0.4"
env_logger = "0.10.0"
rand = "0.8.5"
lazy_static = "1.4.0"
itertools = "0.10"