[package]
name = "torfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
regex = "1"
tordoc = { path = "../tordoc" }
tor-circuit-generator = { path = "../tor-circuit-generator" }
seeded_rand = { path = "../seeded_rand" }
log = "0.4"
ppcalc_metric = { path = "../ppcalc_metric" }
env_logger = "0.10.0"
rand = "0.8.5"
lazy_static = "1.4.0"
itertools = "0.10"
rand_distr = "0.4.3"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.20", features = [
    "macros",
    "serde-human-readable",
    "local-offset",
] }
zstd = { version = "0.12", features = ["zstdmt"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
crossbeam = "0.8"
csv = "1.2.0"
num_cpus = "1.16.0"
